--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <img src="img/photo_id.JPG" alt="photo" class="photoId">
             <div class="contact-title">Contact</div>
             <ul class="contact-content">
-                <li>+225 01 02 86 46 03</li>
-                <li>adamodial@gmail.com</li>
-                <li>Marcory boulevard du Cameroun, Abidjan Côte d'Ivoire</li>
-                <li>Permis de conduire ABCDE</li>
+                <li class="telephone">+225 01 02 86 46 03</li>
+                <li class="email">adamodial@gmail.com</li>
+                <li class="localisation">Marcory boulevard du Cameroun, Abidjan Côte d'Ivoire</li>
+                <li class="permisDeConduire">Permis de conduire ABCDE</li>
             </ul>
         </aside>
         <section class="header-content">
@@ -32,10 +32,30 @@
             <aside class="contact-info">
                 <div class="contact-title">CONTACT</div>
                 <ul class="contact-content">
-                    <li>+225 01 02 86 46 03</li>
-                    <li>adamodial@gmail.com</li>
-                    <li>Marcory boulevard du Cameroun, Abidjan Côte d'Ivoire</li>
-                    <li>Permis de conduire ABCDE</li>
+                    <li class="telephone">
+                        </svg><svg class="icon">
+                            <use xlink:href="img/sprite.svg#phone"></use>
+                        </svg>
+                        <span>+225 01 02 86 46 03</span>
+                    </li>
+                    <li class="email">
+                        </svg><svg class="icon">
+                            <use xlink:href="img/sprite.svg#email"></use>
+                        </svg>
+                        <span>adamodial@gmail.com</span>
+                    </li>
+                    <li class="localisation">
+                        </svg><svg class="icon">
+                            <use xlink:href="img/sprite.svg#location"></use>
+                        </svg>
+                        <span>Marcory boulevard du Cameroun, Abidjan Côte d'Ivoire</span>
+                    </li>
+                    <li class="permisDeConduire">
+                        </svg><svg class="icon">
+                            <use xlink:href="img/sprite.svg#permis1"></use>
+                        </svg>
+                        <span>Permis de conduire ABCDE</span>
+                    </li>
                 </ul>
             </aside>
             
