Nettoyage du code (des classes poluantes de bootstrap) de index.html

--- a/index.html
+++ b/index.html
@@ -74,37 +74,37 @@
                 <li>
                     <span class="lbl_langageInfo">HTML / CSS</span>
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:90%"></div>
+                        <div class="progress-bar" style="width:90%"></div>
                     </div>
                 </li>
                 <li>
                     <span class="lbl_langageInfo">PHP / MYSQL</span>
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:90%"></div>
+                        <div class="progress-bar" style="width:90%"></div>
                     </div>
                 </li>
                 <li>
                     <span class="lbl_langageInfo">JAVASCRIPT</span>
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:85%"></div>
+                        <div class="progress-bar " style="width:85%"></div>
                     </div>
                 </li>
                 <li>
                     <span class="lbl_langageInfo">JAVA</span>
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:70%"></div>
+                        <div class="progress-bar" style="width:70%"></div>
                     </div>
                 </li>
                 <li>
                     <span class="lbl_langageInfo">C#</span>
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:60%"></div>
+                        <div class="progress-bar" style="width:60%"></div>
                     </div>
                 </li>
                 <li>
                     <span class="lbl_langageInfo">PYTHON</span>
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:60%"></div>
+                        <div class="progress-bar" style="width:60%"></div>
                     </div>
                 </li>
             </ul>
@@ -120,7 +120,7 @@
                 <li>Installation et Administration de machines virtuelles(VM)</li>
             </ul>
 
-            <div class="softSkills-title bg-primary text-white">SOFT SKILLS</div>
+            <div class="softSkills-title">SOFT SKILLS</div>
             <ul class="softSkill-content">
                 <li>Fiable et rigoureux</li>
                 <li>Réactif et toujours à la pointe des dernières technologies</li>
@@ -129,18 +129,18 @@
                 <li>Débrouillard et déterminé</li>
             </ul>
 
-            <div class="langues-title bg-primary text-white">LANGUES</div>
+            <div class="langues-title">LANGUES</div>
             <ul class="langues-content">
                 <li>
                     Français
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:98%"></div>
+                        <div class="progress-bar" style="width:98%"></div>
                     </div>
                 </li>
                 <li>
                     Anglais
                     <div class="progress border barreNiveau">
-                        <div class="progress-bar bg-white" style="width:40%"></div>
+                        <div class="progress-bar " style="width:40%"></div>
                     </div>
                 </li>
             </ul>
@@ -149,13 +149,13 @@
         <div class="sidebar-droit">
 
             <main class="experiences">
-                <div class="experience-title bg-primary text-white">EXPERIENCES</div>
-                <section class="teleoperateur sectionExperience">
+                <div class="experience-title">EXPERIENCES</div>
+                <section class="sectionExperience">
                     <div class="periode">
                         Aout 2018 - juin 2019 (10 mois)
                     </div>
                     <div class="lblexperience">
-                        <div class="lblPoste text-primary">
+                        <div class="lblPoste">
                             Téléopérateur pour une PME d’achat/Vente de véhicules d’occasion
                         </div>
                         <ul class="taches">
@@ -168,11 +168,11 @@
                 </section>
 
                 <section class="interimaireComptable sectionExperience">
-                    <div class="periode bg-secondary text-white">
+                    <div class="periode">
                         Novembre 2016 – Mars 2017 (04 mois)
                     </div>
                     <div class="lblexperience">
-                        <div class="lblPoste text-primary">
+                        <div class="lblPoste">
                             Intérimaire comptable au sein de la société Worolux Sarl (Entreprise de VTC)
                         </div>
                         <ul class="taches">
@@ -188,11 +188,11 @@
                 </section>
 
                 <section class="sectionExperience">
-                    <div class="periode bg-secondary text-white">
+                    <div class="periode">
                         Septembre 2014 – Octobre 2016 (02 ans)
                     </div>
                     <div class="lblexperience">
-                        <div class="lblPoste text-primary">
+                        <div class="lblPoste">
                             Technicien informatique au sein de la Société Africaine de Développement(SADev)
                         </div>
                         <ul class="taches">
@@ -207,11 +207,11 @@
                 </section>
 
                 <section class="sectionExperience">
-                    <div class="periode bg-secondary text-white">
+                    <div class="periode">
                         Janvier 2014 – Avril 2014 (03 mois)
                     </div>
                     <div class="lblexperience">
-                        <div class="lblPoste text-primary">
+                        <div class="lblPoste">
                             Stagiaire informaticien à la mairie d’Adjamé
                         </div>
                         <ul class="taches">
@@ -226,12 +226,12 @@
 
             <main class="formation">
                 <div class="formation-title">FORMATION</div>
-                <section class="btsIda sectionExperience">
+                <section class="sectionExperience">
                     <div class="periode">
                         2013 - 2014
                     </div>
                     <div class="lblformation">
-                        <div class="lbldiplome text-primary">
+                        <div class="lbldiplome">
                             BTS option IDA <span class="etablissement">Groupe ESAM | Abidjan</span>
                         </div>
                         <p class="descriptDiplome">
@@ -240,7 +240,7 @@
                     </div>
                     
                 </section>
-                <section class="bac sectionExperience">
+                <section class="sectionExperience">
                     <div class="periode">
                         2010 - 2011
                     </div>
@@ -254,7 +254,7 @@
             </main>
 
             <main class="hobbies">
-                <div class="hobbies-title bg-primary text-white">HOBBIES</div>
+                <div class="hobbies-title">HOBBIES</div>
                 <ul class="hobbies-content">
                     <li>Football</li>
                     <li>Lecture</li>
