Ajout de la partie références

--- a/index.html
+++ b/index.html
@@ -262,6 +262,20 @@
                     <li>Scrabble</li>
                 </ul>
             </main>
+
+            <main class="references">
+                <div class="references-title">Références</div>
+                <ul class="references-content">
+                    <li>
+                        <a href="https://demsydev.github.io" target="_blank" title="Ce site">
+                            demsydev.github.io
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://cerogi.com" target="_blank" title="Site internet d'une entreprise de propreté, hygiène">cerogi.com</a>
+                    </li>
+                </ul>
+            </main>
             
         </div>
     </div>
